<resources>
    <string name="title_calc">계산기</string>
    <string name="title_join">회원가입</string>
    <string name="title_ajaxlist">AJAXLIST</string>

    <string name="app_name">My Application</string>
    <string name="user_name">이름</string>
    <string name="user_age">나이</string>
    <string name="user_habit">취미</string>
    <string name="user_sex">성별</string>
    <string name="user_man">남</string>
    <string name="user_woman">여</string>
    <string name="join">가입</string>
    <string name="back">뒤로가기</string>

    <string name="title_imageview">이미지뷰</string>
    <string name="title_sql">SQLite</string>
    <string name="title_sqllist">SQLite List</string>
    <string name="title_sqlmod">SQLite Mod</string>
    <string name="sql_id">ID</string>
    <string name="sql_pw">Password</string>
    <string name="sql_user_nm">이름</string>
    <string name="sql_user_age">나이</string>
    <string name="sql_user_alter">수정</string>
    <string name="sql_user_delete">삭제</string>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_drawer_menu">서랍 메뉴</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
