<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".join.JoinActivity"
    android:orientation="vertical">

    <!--이름-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView style="@style/join_tv_title"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <!--나이-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView style="@style/join_tv_title"
            android:text="@string/user_age"/>

        <TextView
            android:id="@+id/tv_age_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <!--취미-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView style="@style/join_tv_title"
            android:text="@string/user_habit"/>

        <TextView
            android:id="@+id/tv_habit_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <!--성별-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView style="@style/join_tv_title"
            android:text="@string/user_sex"/>

        <TextView
            android:id="@+id/tv_sex_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"/>
    <!-- layout_gravity : 내 자신이 부모의 공간안에서 자리하고 싶을 때
         gravity : 부모의 공간안에서 자식 요소들이 자리할 때 -->
</LinearLayout>